--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-maps": "^1.10.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-vector-icons": "^10.0.3"
   },
