--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-image-picker": "^7.1.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-vector-icons": "^10.0.3",
-    "expo-image-picker": "~14.7.1"
+    "expo-image-picker": "~14.7.1",
+    "@react-native-picker/picker": "2.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
