--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/drawer": "^6.6.14",
     "expo": "^50.0.13",
     "expo-image-picker": "~14.7.1",
