--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "^1.11.3",
     "react-native-reanimated": "~3.6.2",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-sensors": "~12.9.1"
   }
 }
