--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "@react-native-community/geolocation": "^3.2.0",
     "@react-navigation/drawer": "^6.6.11",
-    "expo": "~50.0.8",
+    "expo": "^50.0.11",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "haversine": "^1.1.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "^1.10.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.3",
-    "expo-location": "~16.5.5"
+    "expo-dev-client": "~3.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
