--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/drawer": "^6.6.14",
+    "@react-navigation/native": "^6.1.16",
     "expo": "^50.0.13",
     "expo-image-picker": "~14.7.1",
     "expo-location": "~16.5.5",
+    "expo-sensors": "~12.9.1",
     "expo-status-bar": "^1.11.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
@@ -14,7 +16,6 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "^1.11.3",
     "react-native-reanimated": "~3.6.2",
-    "react-native-web": "~0.19.6",
-    "expo-sensors": "~12.9.1"
+    "react-native-web": "~0.19.6"
   }
 }
