--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.adam1136.test"
+      "package": "com.adam1136.test",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
