--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "^1.11.3",
     "react-native-reanimated": "~3.6.2",
+    "react-native-screens": "^3.30.1",
     "react-native-web": "~0.19.6"
   }
 }
